--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/kingsley-einstein/termii-js#readme",
   "dependencies": {
-    "axios": "^1.3.5"
+    "axios": "^1.3.5",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "typescript": "^5.0.4"
   }
 }
