--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "termii",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write **/**/*.{ts,json}"
+    "test": "mocha --require ts-node/register test/index.test.ts",
+    "format": "prettier --write **/**/*.{ts,json}",
+    "build": "rm -rf dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,16 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
     "@types/lodash": "^4.14.195",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "mocha-typescript": "^1.1.17",
+    "nock": "^13.3.1",
+    "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
-  }
+  },
+  "files": ["dist"]
 }
