--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "termii-js",
+  "name": "@lonely_dev/termii-js",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "test": "mocha --require ts-node/register test/index.test.ts",
     "format": "prettier --write **/**/*.{ts,json}",
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "prepublishOnly": "yarn build"
   },
   "repository": {
     "type": "git",
@@ -35,5 +36,5 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
-  "files": ["dist"]
+  "files": ["dist", "LICENSE"]
 }
