--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "mocha --require ts-node/register test/index.test.ts",
-    "format": "prettier --write **/**/*.{ts,json}",
+    "format": "prettier --write .",
     "build": "rm -rf dist && tsc",
     "prepublishOnly": "yarn build"
   },
